Modularize test utilities
This allows unit tests to be modularized as well, which in turn is sometimes required when testing modular artifacts.